--- a/src/index.css
+++ b/src/index.css
@@ -22,26 +22,26 @@ a{
     text-decoration:none;
 }
 .backgound{
-    background-image: url('/public/image/login-background.jpg');
+    background-image: url('/image/login-background.jpg');
     background-size: cover;
     background-position: center;
     
 }
 .logo-one  {
-    background-image: url('/public/image/cta-logo-one.svg');
+    background-image: url('/image/cta-logo-one.svg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
 .logo-two {
-    background-image: url('/public/image/cta-logo-two.png');
+    background-image: url('/image/cta-logo-two.png');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 
 }
 .logo{
-    background-image: url('/public/image/logo.svg');
+    background-image: url('/image/logo.svg');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -62,9 +62,9 @@ a{
     font-weight: 500;
     letter-spacing: 1px;
     color: #f9f9f9;
-  }
+}
   
-  .Navlink::before {
+.Navlink::before {
     content: "";
     position: absolute;
     bottom: -4px; 
@@ -73,15 +73,18 @@ a{
     height: 2px;
     background-color: #f9f9f9;
     transition: width 0.8s ease;
-  }
+}
   
-  .Navlink:hover::before {
+.Navlink:hover::before {
     width: 100%; 
-  }
+}
   
-  .Navlink.active::before {
+.Navlink.active::before {
     width: 100%; 
-  }
+}
+.Login{
+    transition:all ease 0.5s;
+}
   
 @media only  screen and (min-width:768px) {
     body{
