--- a/src/index.css
+++ b/src/index.css
@@ -102,8 +102,14 @@ a{
 .slick-arrow{
     opacity: 0;
     transition: all ease 0.5s;
-}
 
+}
+.slick-slider{
+    transition: all  ease  0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .slick-slider ul li button::before{
   font-size: 10px;
   color: rgb(150, 150, 171);
@@ -114,13 +120,72 @@ a{
 .slick-slider:hover  .slick-arrow{
     opacity: 1;
 }
-.slick-slider:hover {
-    border: 1px solid white;
-    transition: all ease 0.5s;
 
-}
 .slick-list{
     overflow:initial;
+}
+.Imagewrape{
+    transition: all  0.5s ease 0s;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+  
+}
+.Imagewrape a {
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: rgb(0 0 0 /69%) 0px 26px 30px -10px , 
+    rgb(0 0 0 /73%) 0px 16px 10px -10px;
+    display: block;
+    padding: 4px;
+    position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+
+.Imagewrape a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 12px;
+}
+.Imagewrape:hover{
+    border: 2px solid white;
+
+}
+
+.Viewerbox{
+    border-radius: 10px;
+    position: relative;
+    box-shadow: rgb(0 0 0 /69%) 0px 26px 30px -10px , 
+    rgb(0 0 0 /73%) 0px 16px 10px -10px;
+    transition: all  250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 3px solid rgba(249 ,249 , 249, 0.1);
+    overflow: hidden;
+}
+.Viewerbox video{
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all  250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+}
+.Viewerbox:hover video{
+    opacity: 1;
+}
+.Viewerbox:hover{
+    border: 3px solid  white;
+}
+.Viewerbox img{
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
   
 @media only  screen and (min-width:768px) {
