--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ a{
     box-shadow: rgb(0 0 0 /69%) 0px 26px 30px -10px , 
     rgb(0 0 0 /73%) 0px 16px 10px -10px;
     transition: all  250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    border: 3px solid rgba(249 ,249 , 249, 0.1);
+    border: 3px solid #f9f9f91a;
     overflow: hidden;
 }
 .Viewerbox video{
